--- a/.github/workfows/first-action.yml
+++ b/.github/workfows/first-action.yml
@@ -1,4 +1,4 @@
-name: first GitHub Action file
+name: My First GitHub Actions
 
 on: [push]
 
@@ -8,12 +8,11 @@ jobs:
 
     strategy:
       matrix:
-        pyhton-version: [3.8, 3.9]
-        python-version: [3.8, 3.9]  # Corrected typo in 'python-version'
+        python-version: [3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up python
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
@@ -26,6 +25,4 @@ jobs:
     - name: Run tests
       run: |
         cd src
-        python -m pytest python.py
-
-
+        python -m pytest addition.py
